
PIG-4028: add a flag to control the ivy resolve/retrieve output (gkesavan via daijy)

PIG-4015: Provide a way to disable auto-parallism in tez (daijy)

PIG-3846: Implement automatic reducer parallelism (daijy)

PIG-3939: SPRINTF function to format strings using a printf-style template (mrflip via cheolsoo)

PIG-3970: Merge Tez branch into trunk (daijy)
 
OPTIMIZATIONS
 
BUG FIXES

PIG-4342: Pig 0.14 cannot identify the uppercase of DECLARE and DEFAULT (daijy)

PIG-4334: PigProcessor does not set pig.datetime.default.tz (rohini)

PIG-4325: StackOverflow when spilling InternalCachedBag (daijy)

PIG-4324: Remove jsch-LICENSE.txt (daijy)

PIG-4267: ToDate has incorrect timezone offsets (bridiver via daijy)

PIG-4319: Make LoadPredicatePushdown InterfaceAudience.Private till PIG-4093 (rohini)

PIG-4312: TestStreamingUDF tez mode leave orphan process on Windows (daijy)

PIG-4314: BigData_5 hang on some machine (daijy)

PIG-4299: SpillableMemoryManager assumes tenured heap incorrectly (prkommireddi via daijy)

PIG-4298: Descending order-by is broken in some cases when key is bytearrays (cheolsoo)

PIG-4263: Move tez local mode unit tests to a separate target (daijy)

PIG-4257: Fix several e2e tests on secure cluster (daijy)

PIG-4261: Skip shipping local resources in tez local mode (daijy)

PIG-4182: e2e tests Scripting_[1-12] fail on Windows (daijy)

PIG-4259: Fix few issues related to Union, CROSS and auto parallelism in Tez (rohini)

PIG-4250: Fix Security Risks found by Coverity (daijy)

PIG-4258: Fix several e2e tests on Windows (daijy)

PIG-4256: Fix StreamingPythonUDFs e2e test failure on Windows (daijy)

PIG-4166: Collected group drops last record when combined with merge join (bridiver via daijy)

PIG-2495: Using merge JOIN from a HBaseStorage produces an error (bridiver via daijy)

PIG-4235: Fix unit test failures on Windows (daijy)

PIG-4245: 1-1 edge vertices should use same jvm opts (rohini)

PIG-4252: Tez container reuse fail when using script udf (daijy)
